:construction: Advance section and upload dialog

--- a/src/app/main/pages/spares/frequency/dialogs/upload-file-frequency-dialog/upload-file-frequency-dialog.component.html
+++ b/src/app/main/pages/spares/frequency/dialogs/upload-file-frequency-dialog/upload-file-frequency-dialog.component.html
@@ -1,1 +1,107 @@
-<p>upload-file-frequency-dialog works!</p>
+<div class="container">
+
+    <h2 mat-dialog-title style="display: flex; padding-bottom: 0px;margin-bottom: 0px;">
+        <div style="margin-top: 5px; margin-right: 15px;" mat-dialog-close>
+            <mat-icon mat-list-icon>memory</mat-icon>
+        </div>
+        CALCULAR
+    </h2>
+    <mat-divider></mat-divider>
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+
+    <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx,.csv"
+        id="fileInput2">
+    <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()">
+        <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+        SELECCIONE ARCHIVO
+    </button>
+    <mat-dialog-content style="margin-top: 20px;">
+        <ng-container *ngIf="frequenciesDataSource.data.length; else default">
+            <div style="overflow: auto;">
+                <table mat-table [dataSource]="frequenciesDataSource" matSort class="mat-elevation-z8">
+
+                    <ng-container matColumnDef="cuno">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> CUNO </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.cuno}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="wono">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> WONO </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.wono}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="wosgno">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> WOSGNO </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.wosgno}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="pano20">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> PANO20 </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.pano20}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="component">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> COMPONENTE </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component}}
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="arrangement">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> ARREGLO </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.arrangement}}
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="eqmfmd">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> EQMFMD </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.eqmfmd}}
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="spqty">
+                        <th mat-header-cell *matHeaderCellDef class="table__cell"> SPQTY </th>
+                        <td mat-cell *matCellDef="let element" class="table__cell"> {{element.spqty}}
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="actions" stickyEnd>
+                        <th mat-header-cell *matHeaderCellDef class="table__cell">
+                            Acciones
+                        </th>
+
+                        <td mat-cell *matCellDef="let element; let i = index">
+                            <button class="w3-small" mat-icon-button (click)="remove(i)">
+                                <mat-icon>remove_circle</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="frequenciesDisplayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: frequenciesDisplayedColumns;"></tr>
+                </table>
+            </div>
+            <mat-paginator #frequenciesPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]"
+                showFirstLastButtons>
+            </mat-paginator>
+        </ng-container>
+        <ng-template #default>
+            <div class="default">
+                <span>
+                    <mat-icon style="vertical-align: middle;">upload</mat-icon> Adjunte archivo
+                </span>
+            </div>
+        </ng-template>
+
+    </mat-dialog-content>
+
+    <mat-dialog-actions align="end">
+        <button type="file" aria-label="add" mat-button class="footer__btn-close" mat-dialog-close
+            [disabled]="loading$ | async">
+            CANCELAR
+        </button>
+        <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="save()"
+            [disabled]="!frequenciesDataSource.data.length || (loading$ | async)">
+            GUARDAR
+        </button>
+    </mat-dialog-actions>
+</div>
