--- a/src/app/main/pages/spares/frequency/frequency.component.html
+++ b/src/app/main/pages/spares/frequency/frequency.component.html
@@ -4,8 +4,8 @@
         <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Frecuencias
         </h1>
         <button type="file" aria-label="add" mat-button class="btn-add" (click)="openDialog('upload')">
-            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-            SUBIR ARCHIVO
+            <mat-icon aria-label="agregar" class="icon-add">memory</mat-icon>
+            CALCULAR
         </button>
     </div>
     <div class="body-container">
