--- a/src/app/main/pages/spares/replacements/dialogs/upload-file-dialog-replacements/upload-file-dialog-replacements.component.html
+++ b/src/app/main/pages/spares/replacements/dialogs/upload-file-dialog-replacements/upload-file-dialog-replacements.component.html
@@ -13,7 +13,7 @@
         id="fileInput2">
     <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()">
         <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-        SELECIONE ARCHIVO
+        SELECCIONE ARCHIVO
     </button>
     <mat-dialog-content style="margin-top: 20px;">
         <ng-container *ngIf="replacementsDataSource.data.length; else default">
