:rocket: deploty last features

--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -78,6 +78,8 @@
         <div class="info-row">WO Child: <span>{{item.otChild}} </span> </div>
         <div class="info-row"> WO Main: <span> {{item.otMain}}</span> </div>
         <div class="info-row"> Nro Parte: <span> {{item.partNumber}}</span></div>
+        <div class="info-row"> Desc.: <span> {{item.description | slice:0:15}}</span></div>
+        <div class="info-row"> Tarea: <span> {{item.task}}</span></div>
       </div>
       <div class="timer-container">
         <div class="timer-color">
