--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -16,16 +16,16 @@
         </div>       
     </div>
     <mat-divider></mat-divider>
-    <div class="body-container">
-
-        <div class="cards" >
+    <div class="body-container" *ngIf="workShop$ | async as workShops">
+      <div *ngFor="let item of workShops">
+        <div class="cards"  >
             <div class="cards__header">
                 <h3 class="cards__header--title">
-                    Bahia 1
+                  {{item.name}}
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog(item)"
                         >
                         <mat-icon>remove_red_eye</mat-icon>
                         Detalle
@@ -46,317 +46,13 @@
             <div class="cards__body">
                 <div class="cards__body--round">
                 </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
+                <h3 class="cards__body--timer"> {{(item.reportDate['seconds'] * 1000) | date:'h:mm:ss'}}</h3>
+                <button class="cards__body--supplies" >{{item.problemType}}</button>              
                 <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+      </div>
         
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
-        
-        <div class="cards">
-            <div class="cards__header">
-                <h3 class="cards__header--title">
-                    Bahia 1
-                </h3>
-                <div class="cards__header--menu">
-                    <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
-                        >
-                        <mat-icon>remove_red_eye</mat-icon>
-                        Detalle
-                      </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
-                        >
-                        <mat-icon>delete</mat-icon>
-                        Borrar
-                      </button>                  
-                    </mat-menu>
-        
-                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>   
-                </div>
-            </div>
-            
-            <div class="cards__body">
-                <div class="cards__body--round">
-                </div> 
-                <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies" >INSUMOS</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
-            </div>
-        </div>
         
         
     </div>
