--- a/src/app/main/pages/andon/report/report.component.html
+++ b/src/app/main/pages/andon/report/report.component.html
@@ -10,9 +10,11 @@
         <div class="report">
             <h1 class="report__title">Reportar</h1>
             <form [formGroup]="reportForm" autocomplete="off" class="report__form" >
-                <mat-form-field appearance="outline" id="result" class="report__form--input" > 
-                    <mat-label>Nombre de bahia</mat-label>
-                    <input matInput placeholder="Nombre de bahia" formControlName="name"/>
+                <mat-form-field *ngIf="nameBahias$ | async as bahias" appearance="outline" id="result" class="report__form--input"> 
+                    <mat-label>Tipo de problema</mat-label>
+                    <mat-select  formControlName="name">
+                        <mat-option   *ngFor="let item of bahias" [value]="item">{{ item.workShop + " - " +item.name}}</mat-option>
+                    </mat-select>
                     <mat-error *ngIf="reportForm.controls['name'].errors">
                         Campo <strong>requerido.</strong>
                     </mat-error>
@@ -20,7 +22,7 @@
                 <br/>
                 <mat-form-field appearance="outline" id="result" class="report__form--input"> 
                     <mat-label>OT CHILD</mat-label>
-                    <input matInput placeholder="OT CHILD" formControlName="otChild"/>
+                    <input matInput type="number" placeholder="OT CHILD" formControlName="otChild"/>
                     <mat-error *ngIf="reportForm.controls['otChild'].errors">
                         Campo <strong>requerido.</strong>
                     </mat-error>
