--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
@@ -32,6 +32,7 @@
         &--card{
             width: 400px; 
             height: 250px;
+            background: #f1f1f1;
         }
         
     }
