--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -30,7 +30,7 @@
                         <mat-icon>remove_red_eye</mat-icon>
                         Detalle
                       </button>
-                      <button class="w3-small" mat-menu-item (click)="deleteDialog()"
+                      <button class="w3-small" mat-menu-item (click)="deleteDialog(item)"
                         >
                         <mat-icon>delete</mat-icon>
                         Borrar
