--- a/src/app/main/pages/andon/reports/dialogs/details-dialog/details-dialog.component.html
+++ b/src/app/main/pages/andon/reports/dialogs/details-dialog/details-dialog.component.html
@@ -14,21 +14,24 @@
 </h2>
 <mat-dialog-content class="mat-typography" style="margin: 1px;">
     <div style="display: flex; flex-direction: row; justify-content: space-between;">
-        <h1 style="color:#828282;">Babia</h1>
+        <h1 style="color:#828282;">{{data.name}}</h1>
         <div style="display: flex;margin-top: 10px;">
             <div style="background:#FF2D2D; height: 20px; width: 20px; border-radius: 10px;margin-right: 15px;"></div>
-            <span style="font-weight: bold;color: black;">01:00:49</span>
+            <span style="font-weight: bold;color: black;">{{(data.reportDate['seconds'] * 1000) | date:'h:mm:ss'}}</span>
         </div>
     </div>
 
-    <p><span style="font-weight: bold;">OT CLILD : </span> 850092132</p>
-    <p><span style="font-weight: bold;">Tipo de problema : </span> insumos</p>
-    <p><span style="font-weight: bold;">Descripcion : </span> XXXXXXXXXXXXXXXXx</p>
-    <p><span style="font-weight: bold;">Fecha de reporte : </span> 03/03/2021 - 10:44</p>
-    <p><span style="font-weight: bold;">Usuario Reporte : </span>Juan Perez</p>
+    <p><span style="font-weight: bold;">OT CLILD : </span> {{data.otChild}}</p>
+    <p><span style="font-weight: bold;">Tipo de problema : </span> {{data.problemType}}</p>
+    <p><span style="font-weight: bold;">Descripcion : </span> {{data.description}}</p>
+    <p><span style="font-weight: bold;">Fecha de reporte : </span> {{(data.reportDate['seconds'] *1000) | date:'dd/MM/yyyy - h:mm'}} </p>
+    <p><span style="font-weight: bold;">Usuario Reporte : </span>{{data.reportUser}}</p>
     
-    <div style="text-align: center;margin: 15px;">
-        <img class="imge" src="../../../../../../../assets/img/camara.png"  />
+    <div *ngFor="let item of imageArray">
+        <div style="text-align: center;margin: 15px;" >
+            <img class="imge" [src]="item" onError="this.src='../../../../../../../assets/img/camara.png'"/>
+        </div>
     </div>
+    
    
 </mat-dialog-content>
