:rocket: Evaluations query sort asc

--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -81,6 +81,7 @@
         <div class="info-row"> Desc.: <span> {{item.description | slice:0:15}}</span></div>
         <div class="info-row"> Tarea: <span> {{item.task}}</span></div>
       </div>
+      <div class="ms-fill"></div>
       <div class="timer-container">
         <div class="timer-color">
         </div>
