--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
@@ -121,6 +121,8 @@
     border-radius: 10px 10px 0px 0px;
     position: relative;
     width: 200px;
+    display: flex;
+    flex-direction: column;
 }
 
 .header-box {
