--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -123,6 +123,8 @@
     border-radius: 10px 10px 0px 0px;
     position: relative;
     width: 200px;
+    display: flex;
+    flex-direction: column;
 }
 
 .header-box {
