--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -48,12 +48,9 @@
                 </div> 
                 <h3 class="cards__body--timer"> {{(item.reportDate['seconds'] * 1000) | date:'h:mm:ss'}}</h3>
                 <button class="cards__body--supplies" >{{item.problemType}}</button>              
-                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
+                <button class="cards__body--return" (click)="returnDialog(item)">RETOMAR</button>       
             </div>
         </div>
-      </div>
-        
-        
-        
+      </div>       
     </div>
 </div>
