--- a/src/app/main/pages/andon/report/report.component.html
+++ b/src/app/main/pages/andon/report/report.component.html
@@ -13,7 +13,7 @@
                 <mat-form-field *ngIf="nameBahias$ | async as bahias" appearance="outline" id="result" class="report__form--input"> 
                     <mat-label>Nombre de bahia</mat-label>
                     <mat-select  formControlName="name">
-                        <mat-option  *ngFor="let item of bahias" [value]="item">{{item.name}} - <span style="color: #b1abab;">{{item.workShop}}</span></mat-option>
+                        <mat-option  *ngFor="let item of bahias" [value]="item">{{item.name}} - <span style="color: #8f8a8a;">{{item.workShop}}</span></mat-option>
                     </mat-select>
                     <mat-error *ngIf="reportForm.controls['name'].errors">
                         Campo <strong>requerido.</strong>
