--- a/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.scss
+++ b/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.scss
@@ -4,14 +4,26 @@
     justify-content: space-between;
 }
 
-.image{
-    width: 300px;
-    height: 200px;
-}
+
 .form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &__input{
         width: 400px;
     }
+    &__image1{
+        &--image{
+        width: 300px;
+        height: 200px;
+        }
+    }
+    &__image2{
+        &--imgUpload{
+        width: 300px; 
+        height: 200px;
+        }
+    } 
 }
 
 
